// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/List Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-eFegNN gAaKNc"
  >
    <ul
      class="sc-dFtzxp sc-gIDmLj eTnbjW eTAwSV sc-evcjhq bmbhlJ"
    >
      <li>
        <div
          class="sc-fKVqWL hOcWtv sc-bBHxTw bFNBkh"
        >
          You can put 
          <a
            class="sc-eGRUor fekqPY sc-ctqQKy fghAZv"
            color="primary.main"
            href="#"
          >
            a link
          </a>
        </div>
      </li>
      <li>
        <div
          class="sc-fKVqWL hOcWtv sc-bBHxTw bFNBkh"
        >
          And also some 
          <code>
            code
          </code>
        </div>
      </li>
      <li>
        <div
          class="sc-fKVqWL hOcWtv sc-bBHxTw bFNBkh"
        >
          Multiline text
          <div
            class="sc-fKVqWL hOcWtv sc-bBHxTw bFNBkh"
          >
            that breaks into multiple lines
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Core/List Ordered 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-eFegNN gAaKNc"
  >
    <ol
      class="sc-dFtzxp sc-brSvTw eTnbjW iUbKCC sc-evcjhq bmbhlJ"
    >
      <li>
        <div
          class="sc-fKVqWL hOcWtv sc-bBHxTw bFNBkh"
        >
          You can put 
          <a
            class="sc-eGRUor fekqPY sc-ctqQKy fghAZv"
            color="primary.main"
            href="#"
          >
            a link
          </a>
        </div>
      </li>
      <li>
        <div
          class="sc-fKVqWL hOcWtv sc-bBHxTw bFNBkh"
        >
          And also some 
          <code>
            code
          </code>
        </div>
      </li>
      <li>
        <div
          class="sc-fKVqWL hOcWtv sc-bBHxTw bFNBkh"
        >
          Multiline text
          <div
            class="sc-fKVqWL hOcWtv sc-bBHxTw bFNBkh"
          >
            that breaks into multiple lines
          </div>
        </div>
      </li>
    </ol>
  </div>
</div>
`;
